# AlgorithmsWithRust_SortingAndSearching

./: Cargo.toml  README.md
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
.devcontainer/fedora/: Dockerfile
.devcontainer/scripts/: build-fedora.sh  build-ubuntu.sh  run.sh
.devcontainer/starship_config/: starship.toml
.devcontainer/ubuntu/: Dockerfile
src/: algorithms.rs  helpers.rs  lib.rs  main.rs
