[package]
name = "sorting"
version = "0.1.0"
edition = "2021"
default-run = "cocktail_shaker_bubble_sort"

[lib]
name = "sorting"
path = "src/lib.rs"

[[bin]]
name = "sorting"
path = "src/main.rs"

[[bin]]
name = "bubble_sort"
path = "src/bin/bubble_sort.rs"

[[bin]]
name = "cocktail_shaker_bubble_sort"
path = "src/bin/cocktail_shaker_bubble_sort.rs"

[dependencies]
