[package]
name = "sorting"
version = "0.1.0"
edition = "2021"
default-run = "binary_search"

[lib]
name = "sorting"
path = "src/lib.rs"

[[bin]]
name = "sorting"
path = "src/main.rs"

[[bin]]
name = "bubble_sort"
path = "src/bin/bubble_sort.rs"

[[bin]]
name = "cocktail_shaker_bubble_sort"
path = "src/bin/cocktail_shaker_bubble_sort.rs"

[[bin]]
name = "quicksort"
path = "src/bin/quicksort.rs"

[[bin]]
name = "counting_sort"
path = "src/bin/counting_sort.rs"

[[bin]]
name = "customer_counting_sort"
path = "src/bin/customer_counting_sort.rs"

[[bin]]
name = "linear_search"
path = "src/bin/linear_search.rs"

[[bin]]
name = "binary_search"
path = "src/bin/binary_search.rs"

[dependencies]
